# Modules/routes/Sendmail.route.js
@@ -1,7 +1,0 @@
-module.exports = function (app) {
-  var controller = require("../controller/Sendmail.controller");
-
-  //Get List
-  app.get("/Sendmail/:Mail", controller.SendMail);
-
-};
